--- a/index.html
+++ b/index.html
@@ -7,4 +7,15 @@
         <link rel="stylesheet" href="styles.css">
         <title>Reservia</title>
     </head>
+    <body>
+        <!-- Header -->
+        <header>
+            <img src="images/logo/Reservia.svg" alt="Logo Reservia"/>
+            <ul>
+                <li class="lien1"><a href="#" class="lien11">Hébergements</a></li>
+                <li><a href="#">Activités</a></li>
+            </ul>
+            <span><a href="#" class="lien3">S'inscrire</a></span>
+        </header>
+    </body>
 </html>
