--- a/index.html
+++ b/index.html
@@ -17,5 +17,46 @@
             </ul>
             <span><a href="#" class="lien3">S'inscrire</a></span>
         </header>
+        <!-- Main -->
+        <main>
+            <!-- Main - Search -->
+            <section>    
+                <div>
+                    <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+                    <p>En plein centre-ville ou en pleine nature</p>
+                </div>
+                <div class="search">
+                    <span><i class="fas fa-map-marker-alt"></i></span>
+                    <input type="search" placeholder="Marseille, France">
+                    <div>
+                        <p>Rechercher</p>
+                        <i class="searchFormSubmitinputIcon fas fa-search"></i>
+                    </div>
+                </div>
+                <div class="filter">
+                    <h3 class="filter_title">Filtres</h3>
+                    <div class="filter_texticon">
+                        <i class="fas fa-money-bill"></i>
+                        <h3>Economique</h3>
+                    </div>
+                    <div class="filter_texticon">
+                        <i class="fas fa-child"></i>
+                        <h3>Familial</h3>
+                    </div>
+                    <div class="filter_texticon">
+                        <i class="fas fa-heart"></i>
+                        <h3>Romantique</h3>
+                    </div>
+                    <div class="filter_texticon">
+                        <i class="fas fa-dog"></i>
+                        <h3>Animaux autorisés</h3>
+                    </div>
+                </div>
+                <div class="info">
+                    <i class="fas fa-info"></i>
+                    <p>Plus de 500 logements sont disponibles dans cette ville</p>
+                </div>
+            </section>
+        </main>
     </body>
 </html>
