--- a/index.html
+++ b/index.html
@@ -57,6 +57,171 @@
                     <p>Plus de 500 logements sont disponibles dans cette ville</p>
                 </div>
             </section>
+            <!-- Main - Hosting -->
+            <section class="hosting">
+                <div class="hosting1">
+                    <h2>Hébergement à Marseille</h2>
+                    <article class="hosting1_card">
+                        <a href="#">
+                            <img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="Auberge la Cannebière" class="hosting1_img"/>
+                            <div class="hosting1_detailarticle">
+                                <h3>Auberge la Cannebière</h3>
+                                <p>Nuit à partir de <strong>25€</strong></p>
+                                <div class="hosting1_star">
+                                    <i class="fas fa-star colorblue_star"></i>
+                                    <i class="fas fa-star colorblue_star"></i>
+                                    <i class="fas fa-star colorblue_star"></i>
+                                    <i class="fas fa-star colorblue_star"></i>
+                                    <i class="fas fa-star colorgrey_star"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="hosting1_card">
+                        <a href="#">
+                            <img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hôtel du port" class="hosting1_img"/>
+                            <div class="hosting1_detailarticle">
+                                <h3>Hôtel du port</h3>
+                                <p>Nuit à partir de <strong>52€</strong></p>
+                                <div class="hosting1_star">
+                                    <i class="fas fa-star colorblue_star"></i>
+                                    <i class="fas fa-star colorblue_star"></i>
+                                    <i class="fas fa-star colorblue_star"></i>
+                                    <i class="fas fa-star colorblue_star"></i>
+                                    <i class="fas fa-star colorblue_star"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="hosting1_card">
+                        <a href="#">
+                            <img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="Hôtel les mouettes" class="hosting1_img"/>
+                            <div class="hosting1_detailarticle">
+                                <h3>Hôtel les mouettes</h3>
+                                <p>Nuit à partir de <strong>76€</strong></p>
+                                <div class="hosting1_star">
+                                    <i class="fas fa-star colorblue_star"></i>
+                                    <i class="fas fa-star colorblue_star"></i>
+                                    <i class="fas fa-star colorblue_star"></i>
+                                    <i class="fas fa-star colorblue_star"></i>
+                                    <i class="fas fa-star colorgrey_star"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="hosting1_card">
+                        <a href="#">
+                            <img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="Hôtel de la mer" class="hosting1_img"/>
+                            <div class="hosting1_detailarticle">
+                                <h3>Hôtel de la mer</h3>
+                                <p>Nuit à partir de <strong>46€</strong></p>
+                                <div class="hosting1_star">
+                                    <i class="fas fa-star colorblue_star"></i>
+                                    <i class="fas fa-star colorblue_star"></i>
+                                    <i class="fas fa-star colorblue_star"></i>
+                                    <i class="fas fa-star colorgrey_star"></i>
+                                    <i class="fas fa-star colorgrey_star"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="hosting1_card">
+                        <a href="#">
+                            <img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="Auberge le Panier" class="hosting1_img"/>
+                            <div class="hosting1_detailarticle">    
+                                <h3>Auberge le Panier</h3>
+                                <p>Nuit à partir de <strong>23€</strong></p>
+                                <div class="hosting1_star">
+                                    <i class="fas fa-star colorblue_star"></i>
+                                    <i class="fas fa-star colorblue_star"></i>
+                                    <i class="fas fa-star colorblue_star"></i>
+                                    <i class="fas fa-star colorblue_star"></i>
+                                    <i class="fas fa-star colorgrey_star"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="hosting1_card">
+                        <a href="#">
+                            <img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="Hôtel chez Amina" class="hosting1_img"/>
+                            <div class="hosting1_detailarticle">    
+                                <h3>Hôtel chez Amina</h3>
+                                <p>Nuit à partir de <strong>96€</strong></p>
+                                <div>
+                                    <i class="fas fa-star colorblue_star"></i>
+                                    <i class="fas fa-star colorblue_star"></i>
+                                    <i class="fas fa-star colorblue_star"></i>
+                                    <i class="fas fa-star colorblue_star"></i>
+                                    <i class="fas fa-star colorblue_star"></i>
+                                </div>
+                            </div>
+                        </a>
+                    </article>
+                    <a href="#"><h3>Afficher plus</h3></a>               
+                </div>
+                <div class="hosting2">
+                    <div class="hosting2_head">
+                        <h2>Les plus populaires</h2>
+                        <i class="fas fa-chart-line fa-lg"></i>
+                    </div>
+                    <div class="hosting2_bloc">
+                        <article>
+                            <a href="#" class="hosting2_card">
+                                <img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="Hôtel Le soleil du matin" class="hosting2_img">
+                                <div class="hosting2_detailarticle">
+                                    <div>
+                                        <h3>Hôtel Le soleil du matin</h3>
+                                        <p>Nuit à partir de <strong>128€</strong></p>
+                                    </div>
+                                    <div class="hosting2_star">
+                                        <i class="fas fa-star colorblue_star"></i>
+                                        <i class="fas fa-star colorblue_star"></i>
+                                        <i class="fas fa-star colorblue_star"></i>
+                                        <i class="fas fa-star colorblue_star"></i>
+                                        <i class="fas fa-star colorblue_star"></i>
+                                    </div>
+                                </div>
+                            </a>
+                        </article>
+                        <article>
+                            <a href="#" class="hosting2_card">
+                                <img src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="Au coeur de l'eau Chambres d'hôtes" class="hosting2_img">
+                                <div class="hosting2_detailarticle">    
+                                    <div>   
+                                        <h3>Au coeur de l'eau Chambres d'hôtes</h3>
+                                        <p>Nuit à partir de <strong>71€</strong></p>
+                                    </div>   
+                                    <div class="hosting2_star">
+                                        <i class="fas fa-star colorblue_star"></i>
+                                        <i class="fas fa-star colorblue_star"></i>
+                                        <i class="fas fa-star colorblue_star"></i>
+                                        <i class="fas fa-star colorblue_star"></i>
+                                        <i class="fas fa-star colorgrey_star"></i>
+                                    </div>
+                                </div>
+                            </a>
+                        </article>
+                        <article>
+                            <a href="#" class="hosting2_card">
+                                <img src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="Hôtel Tout bleu et Blanc" class="hosting2_img">
+                                <div class="hosting2_detailarticle">
+                                    <div>
+                                        <h3>Hôtel Tout bleu et Blanc</h3>
+                                        <p>Nuit à partir de <strong>68€</strong></p>
+                                    </div>
+                                    <div class="hosting2_star">
+                                        <i class="fas fa-star colorblue_star"></i>
+                                        <i class="fas fa-star colorblue_star"></i>
+                                        <i class="fas fa-star colorblue_star"></i>
+                                        <i class="fas fa-star colorblue_star"></i>
+                                        <i class="fas fa-star colorgrey_star"></i>
+                                    </div>
+                                </div>
+                            </a>
+                        </article>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
