add html + css files : main - activity

--- a/index.html
+++ b/index.html
@@ -222,6 +222,52 @@
                     </div>
                 </div>
             </section>
+            <!-- Main - Activity -->
+            <section class="activity">
+                <h2>Activités à Marseille</h2>
+                <div class="activity_bloc">
+                    <a href="#" class="activity_1card"> 
+                        <figure> 
+                            <img src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="Vieux port" class="activity_img1">
+                            <figcaption><h3>Vieux port</h3></figcaption>
+                        </figure>  
+                    </a>
+                    <div class="activity_2card">
+                        <a href="#" class="activity_2card2">
+                            <figure>
+                                <img src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="Fort de Pomègues" class="activity_img2">
+                                <figcaption><h3>Fort de Pomègues</h3></figcaption>
+                            </figure>
+                        </a>
+                        <a href="#" class="activity_2card2">
+                            <figure>
+                                <img src="images/activites/4_small/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" alt="Îles du Frioul" class="activity_img3">
+                                <figcaption><h3>Îles du Frioul</h3></figcaption>
+                            </figure>
+                        </a>
+                    </div>
+                    <a href="#" class="activity_1card">
+                        <figure>    
+                            <img src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="Parc National des Calanques" class="activity_img1">
+                            <figcaption><h3>Parc National des Calanques</h3></figcaption>
+                        </figure>    
+                    </a>
+                    <div class="activity_2card">
+                        <a href="#" class="activity_2card2">
+                            <figure>
+                                <img src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="Notre-Dame-de-la-Garde" class="activity_img3">
+                                <figcaption><h3>Notre-Dame-de-la-Garde</h3></figcaption>
+                            </figure>
+                        </a>
+                        <a href="#" class="activity_2card2">
+                            <figure>
+                                <img src="images/activites/4_small/lena-paulin-wH2-EJoDcV0-unsplash.jpg" alt="Parc Longchamp" class="activity_img2">
+                                <figcaption><h3>Parc Longchamp</h3></figcaption>
+                            </figure>
+                        </a>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
