add css files : responsive for smartphone

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <!-- Header -->
         <header>
-            <img src="images/logo/Reservia.svg" alt="Logo Reservia"/>
+            <img src="images/logo/Reservia.png" alt="Logo Reservia"/>
             <ul>
                 <li class="lien1"><a href="#" class="lien11">Hébergements</a></li>
                 <li><a href="#">Activités</a></li>
