--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
                         <i class="fas fa-child"></i>
                         <h3>Familial</h3>
                     </div>
-                    <div class="filter_texticon">
+                    <div class="filter_texticon filterposition1">
                         <i class="fas fa-heart"></i>
                         <h3>Romantique</h3>
                     </div>
-                    <div class="filter_texticon">
+                    <div class="filter_texticon filterposition2">
                         <i class="fas fa-dog"></i>
                         <h3>Animaux autorisés</h3>
                     </div>
